<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svscrollViewAddF"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:addStatesFromChildren="false"
    android:background="@drawable/bg_debut_dark"
    android:descendantFocusability="beforeDescendants" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
    <com.google.ads.AdView
                xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
                android:id="@+id/ad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                googleads:adSize="BANNER"
                googleads:adUnitId="@string/admob_id"
                android:layout_weight="0" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

            <EditText
                android:id="@+id/etFifuresName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tytle"
                android:maxLines="5">

            </EditText>
      
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

            <EditText
                android:id="@+id/etFifuresDescription"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/description"
                android:ellipsize="end"
                android:inputType="textMultiLine"
                android:minLines="4" />
        
    </LinearLayout>

    <Button
        android:id="@+id/btAddnewFigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>
</ScrollView>