<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svscrollViewAddF"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:addStatesFromChildren="false"
    android:background="@drawable/bg_debut_dark"
    android:descendantFocusability="beforeDescendants" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_debut_dark"
        android:gravity="center"
        android:orientation="vertical" >
        <com.google.ads.AdView
                xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
                android:id="@id/ad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                googleads:adSize="BANNER"
                googleads:adUnitId="@string/admob_id"
                android:layout_weight="0" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvCurFigureName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" >

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etTiming"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/timing" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etComment"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/comment"
                android:inputType="textMultiLine"
                android:minLines="4" />
        </LinearLayout>

        <Button
            android:id="@+id/btSaveRoutineRaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>