<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
 android:id="@+id/llRoutineEditBG" 
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:orientation="horizontal"
 
 android:background="@drawable/listrow_bg_orange">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoutineEditClickAble"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal" 
    android:background="@drawable/listrow_bg_clickable_orange">

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:orientation="vertical" >

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/tvRawNumber"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:layout_weight="0"
		    android:padding="2dp"
		    android:text="1"
		    android:textSize="12dp" />

	<TextView
	    android:id="@+id/tvFigureName"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"
	    android:layout_weight="1"
	    android:text=""
	    android:textColor="@android:color/black"
	    android:textSize="14dp"
	    android:textStyle="bold" >

	</TextView>

	<ImageButton
	    android:id="@+id/btDeleteRoutineRaw"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="0"
	    android:background="@android:color/transparent"
	    android:src="@drawable/delete_icon" />

	</LinearLayout>

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<LinearLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_weight="1" >

			<TextView
			    android:id="@+id/tvFigureNam"
			    style="@style/OrangeSmallStyle"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/timing" />

			<TextView
			    android:id="@+id/tvTiming"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:padding="2dp"
			    android:textColor="@android:color/black"
			    android:textSize="16dp" />

		</LinearLayout>

</LinearLayout>

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
 
	<TextView
	    android:id="@+id/tvRoutineRawCommentTitle"
	    style="@style/BlueSmallStyle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"
	    android:text="@string/comment"
	    android:textSize="16dp" >

	</TextView>

	<TextView
	    android:id="@+id/tvRoutineRawComment"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"
	    android:padding="2dp"
	    android:text=""
	    android:textColor="@android:color/black"
	    android:textSize="16dp" >

	</TextView>
	</LinearLayout>
	</LinearLayout>
	</LinearLayout>
	<ImageView
    android:id="@id/drag_handle"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/drag"
    android:layout_weight="0"
    android:contentDescription="@string/app_name" />

</LinearLayout>